<resources>
    <string name="app_sina_consumer_key">3253877454</string>
    <string name="app_sina_consumer_secret">05cfd90737ccf8373a668e4e0cf48b47</string>
    <string name="request_token_endpoin_url">http://api.t.sina.com.cn/oauth/request_token</string>
    <string name="access_token_endpoint_url">http://api.t.sina.com.cn/oauth/access_token</string>
    <string name="authorization_web_site_url">http://api.t.sina.com.cn/oauth/authorize</string>
    <string name="app_name">Music Man</string>
    <string name="check_apk_activity">正在检查更新，请稍候...</string>
    <string name="update_package_download_update_activity">安装包下载</string>
    <string name="update_optional_title_entry_list_activity">软件更新</string>
    <string name="install_client_now_update_activity">更新文件已下载完成，更新将会重启应用，是否立即更新?</string>
    <string name="comfirn_quit_enforce_update_update_activity">确认取消此安装包下载?这样您将无法继续使用该应用</string>
    <string name="comfirn_quit_update_update_activity">确认取消安装包下载?</string>
    <string name="install_client_now_update_enforce_activity">更新文件已下载完成，请立即更新</string>
    <string name="player_activity_rating_tile">歌曲评分</string>
    <string name="player_notification_title">正在播放 —《%s》</string>
    <string name="mark_song_success">歌曲评分成功</string>
    <string name="garbage_song_success">以后不再推荐此歌曲</string>
    <string name="radio_song_add_love">歌曲已经加入红心电台</string>
    <string name="radio_song_remove_love">歌曲已经从红心电台删除</string>
    <string name="orderwindow_settone">设置振铃</string>
    <string name="fail_to_set_ringtone_util">设置铃声失败!</string>
    <string name="orderwindow_setring">设置彩铃</string>
    <string name="orderwindow_download">下载歌曲</string>
    <string name="orderwindow_sendsong">赠送铃声</string>
    <string name="orderwindow_recommand">免费推荐</string>
    <string name="orderwindow_addsongtoplaylist">添加到播放列表</string>
    <string name="orderwindow_recommand_success">推荐成功</string>
    <string name="orderwindow_sendsong_success">赠送成功</string>
    <string name="add_song_in_playlist">添加成功</string>
    <string name="buy_business">立即购买</string>
    <string name="activity_sendmusic_title">赠送歌曲给好友</string>
    <string name="activity_contact_title">通讯录</string>
    <string name="activity_recommendmusic_title">推荐歌曲给好友</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="confirm">确定</string>
    <string name="cancel">返回</string>
    <string name="commit">提交</string>
    <string name="play_need_login">请登录后继续试听</string>
    <string name="player_status_default_tile">请选择歌曲</string>
    <string name="type_home">家</string>
    <string name="type_mobile">手机</string>
    <string name="type_work">工作</string>
    <string name="type_fax">传真</string>
    <string name="type_other">其他</string>
    <string name="local_music_playallsong">正在添加到播放列表</string>
    <string name="local_music_subtile">%s首</string>
    <string name="local_addmusic_subtile">添加歌曲</string>
    <string name="local_addmusic_nomusic">请添加歌曲</string>
    <string name="local_addmusic_complete">完成</string>
    <string name="local_addmusic_addall">添加所有歌曲</string>
    <string name="local_music_rename_not_empty">歌曲重命名不能为空</string>
    <string name="local_music_after_scan">扫描出%s首歌曲</string>
    <string name="local_song_parse_error">不支持该文件</string>
    <string name="quit_app_dialog_title">退出确认</string>
    <string name="quit_app_dialog_message">确定退出程序?</string>
    <string name="can_not_play_complete_list_activity">无法播放， 可能文件被破坏或者移除</string>
    <string name="sdcard_spcacenotfill_message_common">存储空间不够，播放失败</string>
    <string name="wlan_disconnect_title_util">您的网络异常，请检查网络设置后重试</string>
    <string name="play_failed">播放失败</string>
    <string name="user_calling">正在通话中，无法播放歌曲</string>
    <string name="delete_common">删除</string>
    <string name="sdcard_missing_message_common">请插入存储卡</string>
    <string name="ringtone_set_common">\"%s\" 已经设置为来电铃声</string>
    <string name="fail_to_parse_xml_common">获取数据异常</string>
    <string name="title_information_common">提示</string>
    <string name="song_alrealdy_download_download_policy_list_activity">歌曲已经下载，是否需要查看下载列表?</string>
    <string name="title_timeout_common">超时</string>
    <string name="network_error_common">网络错误</string>
    <string name="unknow_error_common">数据异常，请稍后重试</string>
    <string name="connect_timeout_common">获取数据超时, 请稍后重试</string>
    <string name="server_data_empty_common">未获取到数据，请稍候重试</string>
    <string name="space_not_enough_common">存储空间不足</string>
    <string name="downloading_connecting_common">正在连接...</string>
    <string name="fail_to_add_to_playlisy_myfavor_ok_common">添加歌曲到\"%s\"失败</string>
    <string name="already_in_playlisy_myfavor_ok_common">歌曲已经存在于\"%s\"</string>
    <string name="confirm_delete_item_common">删除该记录?</string>
    <string name="confirm_delete_allitem_common">确认全部删除?</string>
    <string name="vip_member_common">高级会员</string>
    <string name="normal_member_main_activity">普通会员</string>
    <string name="non_member_main_activity">非会员</string>
    <string name="tone_subscription_common">彩铃订制</string>
    <string name="getting_rights_fail_common">下载歌曲权限失败</string>
    <string name="recommend_friend_common">推荐好友加入音乐俱乐部</string>
    <string name="recommend_mobilemusic_common">推荐MusicMan给好友</string>
    <string name="getfail_data_error_common">获取数据失败</string>
    <string name="pls_select_items_common">您还未选中任何歌曲</string>
    <string name="playlist_myfav_common">我的最爱</string>
    <string name="playlist_recent_play_common">最近播放</string>
    <string name="playlist_recent_download_common">最近下载</string>
    <string name="username_common">用户名</string>
    <string name="password_common">密 码</string>
    <string name="username_empty_common">用户名为空</string>
    <string name="hint_username">用户名 3-20个字符，不能以数字开头</string>
    <string name="username_length_wrong_common">用户名只可包含3-20位的字母、数字、下划线，且以字母开头</string>
    <string name="username_include_wrong_char">用户名输入错误</string>
    <string name="password_include_wrong_char">密码输入错误</string>
    <string name="username_first_cant_be_number_common">用户名必须以字母开头，且只能包含3-20位的字母、数字、下划线</string>
    <string name="password_empty_common">请输入密码</string>
    <string name="password_length_wrong_common">密码长度应该为6-12个字符</string>
    <string name="password_not_match_common">两次输入密码不一致</string>
    <string name="phonenum_empty_common">手机号码为空</string>
    <string name="authcode_empty_common">验证码为空</string>
    <string name="phonenum_format_wrong_common">手机号码格式不对</string>
    <string name="phonenum_not_chinamobile_common">请输入正确的中国移动号码</string>
    <string name="network_exceptional_common">网络访问异常，请重试</string>
    <string name="close_wlan_warn">请先关闭WLAN才能正常连接CMWAP</string>
    <string name="loading">数据加载中...</string>
    <string name="no_color_ring_entry_list_activity">您还没有下载彩铃</string>
    <string name="title_delete_running_list_activity">删除下载</string>
    <string name="fail_to_down_download_running_list_activity">歌曲下载失败 : %s</string>
    <string name="getting_rights_ok_running_list_activity">下载歌曲权限成功</string>
    <string name="fail_to_down_vibrate_tone_download_running_list_activity">铃声下载失败</string>
    <string name="fail_to_down_mv_download_running_list_activity">MV下载失败</string>
    <string name="downloading_rate_running_list_activity">%.2fKB/S</string>
    <string name="downloaded_size_running_list_activity">%1$.2fM/%2$.2fM</string>
    <string name="download_state_finish">下载完成</string>
    <string name="download_state_pause">暂停</string>
    <string name="download_state_loading">正在下载</string>
    <string name="download_state_waiting">等待</string>
    <string name="download_state_priority">优先下载</string>
    <string name="download_select_all">全选</string>
    <string name="download_unselect_all">反选</string>
    <string name="download_not_find_music">没有找到下载的歌曲</string>
    <string name="download_requesting">正在请求下载...</string>
    <string name="download_continue_notice_title">下载任务提醒</string>
    <string name="download_continue_notice_content">下载列表中还有没完成的任务，是否查看</string>
    <string name="download_remain_notification">还有%s首歌曲未下载！</string>
    <string name="download_all_start">全部开始</string>
    <string name="download_all_pause">全部暂停</string>
    <string name="set_vibrate_btn">设置来电铃声</string>
    <string name="set_vibrate_successed">设置来电铃声成功</string>
    <string name="set_vibrate_failed">设置来电铃声失败</string>
    <string name="set_vibrate_failed_in_some_mode">该情景模式下无法设置来电铃声</string>
    <string name="current_vibrate">当前铃声</string>
    <string name="delete_playing_song_info_complete_list_activity">\"%s\" 正在播放，无法删除</string>
    <string name="delete_local_file_complete_list_activity">同时删除本地文件</string>
    <string name="music_management_detail_title">音乐管理</string>
    <string name="weibo_count">140字</string>
    <string name="weibo_share">分享</string>
    <string name="share_to_weibo">分享到新浪微博</string>
    <string name="weibo_auth_successed">新浪微博授权成功</string>
    <string name="weibo_auth_error">新浪微博授权失败</string>
    <string name="weibo_auth_exception">新浪微博授权异常</string>
    <string name="weibo_auth_canlce">新浪微博授权退出</string>
    <string name="weibo_auth_new_again">重新进行新浪微博授权</string>
    <string name="left_num_count">%s字</string>
    <string name="weibo_content_empty">请填写分享内容</string>
    <string name="weibo_content_length_over">您输入的字符超过了%s个字符！</string>
    <string name="weibo_share_fail">微博分享失败</string>
    <string name="weibo_share_success">微博分享成功</string>
    <string name="loading_for_business">业务申请中，请稍侯...</string>
    <string name="recommend_song_name">歌曲： %s</string>
    <string name="recommend_singer">歌手： %s</string>
    <string name="recommend_price">资费： 每首歌曲 %s 元</string>
    <string name="recommend_copyright">版权： %s</string>
    <string name="networker_change_is_other_net">您当前使用的移动网络将产生网络流量费用，是否确定继续？</string>
    <string name="wlan_disconnect_cmwap_open_util">您的网络已发生变化，请点击确定退出客户端重新登录</string>
    <string name="net_disconnect_util">网络中断，请稍后重试</string>
    <string name="unknown_album_name_db_controller">未知专辑</string>
    <string name="unknown_artist_name_db_controller">未知歌手</string>
    <string name="unkown_filename_localsong_db_controller">未知歌曲</string>
    <string name="set">设置</string>
    <string name="ok">确定</string>
    <string name="exit">退出</string>
    <string name="more">更多</string>
    <string name="timingclosure">定时关闭</string>
    <string name="feedback">意见反馈</string>
    <string name="feedback_num">200字</string>
    <string name="feedback_send_failed">意见内容过长，请重新输入！</string>
    <string name="refresh">刷新</string>
    <string name="help">使用帮助</string>
    <string name="loading_column_list_activity">数据获取中...</string>
    <string name="loading_radio_list_activity">音乐马上就来...</string>
    <string name="local_music_add_common">您的列表中没有歌曲，是否立即添加歌曲</string>
    <string name="local_music_delplaylist_hassongwarn">您的列表中有歌曲，是否确定删除</string>
    <string name="local_music_select_folder_warning">请选择文件夹扫描</string>
    <string name="local_music_delete_songlist">删除列表</string>
    <string name="local_music_rename_songlist">重命名列表</string>
    <string name="local_music_scan_common">扫描</string>
    <string name="local_music_scan_activity_tile">扫描文件夹</string>
    <string name="local_music_search_common">搜索</string>
    <string name="local_music_scan_directory">扫描目录</string>
    <string name="local_music_scan_than_ten_sec">小于10秒的不扫描(如手机铃声,简短录音等)</string>
    <string name="reset_common">确认</string>
    <string name="player_set">播放设置</string>
    <string name="close_time_ti">定时关闭</string>
    <string name="user_name_fie">账号</string>
    <string name="login_cancellation">登录/注销</string>
    <string name="user_clear_cache">清空缓存</string>
    <string name="user_notification_push">通知推送</string>
    <string name="user_help">帮助</string>
    <string name="user_qita">其他</string>
    <string name="user_feeb_back">意见反馈</string>
    <string name="user_member_flow">免流量说明</string>
    <string name="user_member_update_version">检查新版本</string>
    <string name="app_about">关于</string>
    <string name="play_list_dialog_delete_song">删除歌曲</string>
</resources>