<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_play_list_online_control_dialog"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_play_list_control_dialog_title"
        android:orientation="vertical" >

        <TextView
            android:id="@id/windowTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1.0"
            android:ellipsize="end"
            android:gravity="center"
            android:singleLine="true"
            android:textColor="#ffffffff"
            android:textSize="14.0sp"
            android:textStyle="normal" />
    </LinearLayout>

    <Button
        android:id="@id/orderwindow_addsongtoplaylist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/playlist_popup_window_btn_slt"
        android:text="@string/orderwindow_addsongtoplaylist"
        android:textColor="@android:color/white"
        android:textSize="14.0sp" />

    <Button
        android:id="@id/orderwindow_settone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/playlist_popup_window_btn_slt"
        android:text="@string/orderwindow_settone"
        android:textColor="@android:color/white"
        android:textSize="14.0sp" />

    <Button
        android:id="@id/orderwindow_setring"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/playlist_popup_window_btn_slt"
        android:text="@string/orderwindow_setring"
        android:textColor="@android:color/white"
        android:textSize="14.0sp" />

    <Button
        android:id="@id/orderwindow_download"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/playlist_popup_window_btn_slt"
        android:text="@string/orderwindow_download"
        android:textColor="@android:color/white"
        android:textSize="14.0sp" />

    <Button
        android:id="@id/orderwindow_sendsong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/playlist_popup_window_btn_slt"
        android:text="@string/orderwindow_sendsong"
        android:textColor="@android:color/white"
        android:textSize="14.0sp" />

    <Button
        android:id="@id/orderwindow_recommand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/playlist_popup_window_btn_slt"
        android:text="@string/orderwindow_recommand"
        android:textColor="@android:color/white"
        android:textSize="14.0sp" />

    <Button
        android:id="@id/orderwindow_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/playlist_popup_window_btn_slt"
        android:text="@string/play_list_dialog_delete_song"
        android:textColor="@android:color/white"
        android:textSize="14.0sp" />

</LinearLayout>