<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@id/tile_toe"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg_main"
    android:orientation="vertical" >

    <org.ming.ui.view.TitleBarView
        android:id="@id/more_title_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_my_migu_title"
                android:gravity="center_vertical"
                android:paddingLeft="10.0dip"
                android:text="@string/player_set"
                android:textColor="@color/gray_fifty_percent"
                android:textSize="14.0sp" />

            <Button
                android:id="@id/more_timing_member_close"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/my_migu_list_cell_selector"
                android:gravity="left|center"
                android:paddingLeft="15.0dip"
                android:text="@string/close_time_ti"
                android:textColor="@color/gray_eighty_percent"
                android:textSize="16.0sp" />

            <TextView
                android:id="@id/more_login_music_cancellation_textview"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_my_migu_title"
                android:gravity="center_vertical"
                android:paddingLeft="15.0dip"
                android:text="@string/user_name_fie"
                android:textColor="@color/gray_fifty_percent"
                android:textSize="14.0sp" />

            <Button
                android:id="@id/more_login_music_cancellation"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/my_migu_list_cell_selector"
                android:gravity="left|center"
                android:paddingLeft="15.0dip"
                android:text="@string/login_cancellation"
                android:textColor="@color/gray_eighty_percent"
                android:textSize="16.0sp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_my_migu_title"
                android:gravity="center_vertical"
                android:paddingLeft="15.0dip"
                android:text="@string/user_qita"
                android:textColor="@color/gray_fifty_percent"
                android:textSize="14.0sp" />

            <Button
                android:id="@id/more_member_clear_cache"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/my_migu_list_cell_selector"
                android:gravity="left|center"
                android:paddingLeft="15.0dip"
                android:text="@string/user_clear_cache"
                android:textColor="@color/gray_eighty_percent"
                android:textSize="16.0sp" />

            <RelativeLayout
                android:id="@id/more_member_notification_push"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/list_cell_selector"
                android:clickable="true"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:paddingLeft="15.0dip"
                    android:paddingTop="15.0dip"
                    android:text="@string/user_notification_push"
                    android:textColor="@color/gray_eighty_percent"
                    android:textSize="16.0sp" />

                <CheckBox
                    android:id="@id/more_member_notification_is_push"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_alignParentRight="true" />
            </RelativeLayout>

            <Button
                android:id="@id/more_member_help"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/my_migu_list_cell_selector"
                android:gravity="left|center"
                android:paddingLeft="15.0dip"
                android:text="@string/user_help"
                android:textColor="@color/gray_eighty_percent"
                android:textSize="16.0sp" />

            <Button
                android:id="@id/more_member_opinion"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/my_migu_list_cell_selector"
                android:gravity="left|center"
                android:paddingLeft="15.0dip"
                android:text="@string/user_feeb_back"
                android:textColor="@color/gray_eighty_percent"
                android:textSize="16.0sp" />

            <Button
                android:id="@id/more_member_flow"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/my_migu_list_cell_selector"
                android:gravity="left|center"
                android:paddingLeft="15.0dip"
                android:text="@string/user_member_flow"
                android:textColor="@color/gray_eighty_percent"
                android:textSize="16.0sp" />

            <Button
                android:id="@id/more_member_update_version"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/my_migu_list_cell_selector"
                android:gravity="left|center"
                android:paddingLeft="15.0dip"
                android:text="@string/user_member_update_version"
                android:textColor="@color/gray_eighty_percent"
                android:textSize="16.0sp" />

            <Button
                android:id="@id/app_about"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/my_migu_list_cell_selector"
                android:gravity="left|center"
                android:paddingLeft="15.0dip"
                android:text="@string/app_about"
                android:textColor="@color/gray_eighty_percent"
                android:textSize="16.0sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>