<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/CustomDialogTheme"
    android:layout_width="270.0dip"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="vertical" >

    <EditText
        android:id="@id/micro_username_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30.0dip"
        android:layout_marginRight="20.0dip"
        android:layout_marginTop="30.0dip"
        android:background="@drawable/login_edittext_input_selector"
        android:ellipsize="end"
        android:hint="@string/username_empty_common"
        android:padding="5.0dip"
        android:singleLine="true"
        android:textSize="14.0sp" />

    <EditText
        android:id="@id/micro_password_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30.0dip"
        android:layout_marginRight="20.0dip"
        android:layout_marginTop="30.0dip"
        android:background="@drawable/login_edittext_input_selector"
        android:ellipsize="end"
        android:hint="@string/password_empty_common"
        android:padding="5.0dip"
        android:password="true"
        android:singleLine="true"
        android:textSize="14.0sp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10.0dip"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@id/micro_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/btn_dialog_selector"
            android:gravity="center"
            android:text="@string/ok"
            android:textColor="@android:color/white"
            android:textSize="14.0sp" />
    </LinearLayout>

</LinearLayout>